<resources>
    <string name="app_name">Online Radio Player</string>
    <string name="hint_name">Station name</string>
    <string name="hint_url">Station URL</string>
    <string name="add_radio">Add station</string>
    <string name="playing">Playing: %1$s</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
</resources>
