<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/langLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"/>

            <RadioGroup
                android:id="@+id/langGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/langEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"/>

                <RadioButton
                    android:id="@+id/langSpanish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spanish"/>
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
